<resources>
    <string name="app_name">Shoppie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="not_an_existing_use_sign_up">Not an existing use???Sign Up.</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account???Sign In</string>
    <string name="enter_password_atleast_8_characters">Enter password (Atleast 8 characters)</string>
    <string name="forgot_password">Forgot Password!!</string>
    <string name="dont_worry_just_add_registered_e_mail_and_you_are_done">Dont worry, just add registered e-mail and you are done.</string>
    <string name="registered_email">Registered email</string>
    <string name="reset_password">Reset Password</string>
    <string name="mail_sent_successfully">Mail sent successfully!</string>
    <string name="sent">Recovey mail sent successfully!</string>
    <string name="link_will_be_sent_to_your_mail">link will be sent to your mail.</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="not_signed_in">Not signed in!</string>
    <string name="mu_wishlist">Mu Wishlist</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="product_title">Product Title</string>
    <string name="desc">I was born in an empty sea, My tears created oceans Producing tsunami waves with emotions Patrolling the open seas of an unknown galaxy I was floating in front of who I am physically Spiritually paralyzing mind body and soul It gives me energy when I\'m lyrically exercising I gotta spit \'til the story is told in a dream by celestial bodies Follow me baby</string>
    <string name="feature_value">Feature Value</string>
    <string name="sign_out">Sign out</string>
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>