<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetPassword">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/rel">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/frus"
            android:id="@+id/im"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/fp"
            android:textSize="50sp"
            android:textColor="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/im"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fp"
            android:id="@+id/ll"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/gml"
                android:id="@+id/gmail"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:visibility="gone"
                android:id="@+id/sent"
                android:text="@string/link_will_be_sent_to_your_mail"
                android:textColor="#00FF00"/>
        </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:visibility="invisible"
            android:id="@+id/pb"
            android:layout_below="@id/ll"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fp"
            android:id="@+id/dw"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:gravity="center_horizontal"

            android:textSize="16sp"
            android:layout_marginTop="60dp"
            android:text="@string/dont_worry_just_add_registered_e_mail_and_you_are_done"/>
      <EditText
          android:layout_width="match_parent"
          android:layout_height="30dp"
          android:id="@+id/email"
          android:layout_centerHorizontal="true"
          android:layout_below="@id/dw"
          android:layout_marginTop="25dp"
          android:hint="@string/registered_email"
          android:background="@color/peach"/>
      <Button
          android:layout_width="200dp"
          android:layout_height="30dp"
          android:background="@color/peach"
          android:text="@string/reset_password"
          android:layout_centerHorizontal="true"
          android:enabled="false"
          android:id="@+id/reset"
          android:layout_below="@id/email"
          android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&lt; &lt; back"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/back"
            />
    </RelativeLayout>

</FrameLayout>